feat: add newsletter popup component and integrate into footer
- Added a new NewsletterPopup component for email subscriptions.
- Integrated the NewsletterPopup into the Footer component.
- Updated FormattedDate component to handle optional date formats.
- Added devDependency for @astrojs/netlify in package.json.
- Created a new subscribers.json file to store email addresses.
- Updated BlogPost layout and blog page to improve rendering logic.
- Refined global CSS variables for a softer color palette and improved shadows.

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/OopsException/spiffy-star/issues"
   },
-  "homepage": "https://github.com/OopsException/spiffy-star#readme"
+  "homepage": "https://github.com/OopsException/spiffy-star#readme",
+  "devDependencies": {
+    "@astrojs/netlify": "^6.6.3"
+  }
 }
