--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.16.4",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "@netlify/blobs": "^8.0.0"
   },
   "description": "```sh\r npm create astro@latest -- --template blog\r ```",
   "main": "index.js",
